Resize drawing to available space

--- a/svg-presenter-test.html
+++ b/svg-presenter-test.html
@@ -6,10 +6,10 @@
 	<body>
 		<h1>SVG Presenter Tests</h1>
 		<h2>Drawing 1</h2>
-		<object data="drawing-1.svg" style="width: 1024px; height: 768px;" type="image/svg+xml" id="presentation-1"></object>
+		<object data="drawing-1.svg" style="width: 1024px; height: 768px; display:block;" type="image/svg+xml" id="presentation-1"></object>
 		<h2>Font Test</h2>
-		<object data="font-test.svg" style="width: 640px; height: 480px;" type="image/svg+xml" id="presentation-2"></object>
+		<object data="font-test.svg" style="width: 640px; height: 480px; display:block;" type="image/svg+xml" id="presentation-2"></object>
 		<h2>Resize Test</h2>
-		<object data="font-test.svg" style="width: 480px; height: 360px;" type="image/svg+xml" id="presentation-3"></object>
+		<object data="font-test.svg" width="490px" style="width: 480px; height: 360px; display:block;" type="image/svg+xml" id="presentation-3"></object>
 	</body>
 </html>	
